--- a/app/src/main/res/layout/activity_language.xml
+++ b/app/src/main/res/layout/activity_language.xml
@@ -36,6 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:text="ARABIC"
+            android:textStyle="bold"
             android:textColor="@color/black"
             android:background="@drawable/arrow_circle_transparent"
             app:backgroundTint="@null"
@@ -50,6 +51,7 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:text="ENGLISH"
+            android:textStyle="bold"
             android:background="@drawable/arrow_circle"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/buttonArabic"
