--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -71,16 +71,17 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/editTextTextPassword"
             android:layout_width="match_parent"
-            android:paddingHorizontal="8dp"
+            app:boxStrokeWidth="0dp"
+            app:boxStrokeWidthFocused="0dp"
             android:layout_height="60dp"
             android:layout_marginTop="5dp"
-            android:hint="Enter your password here"
             app:passwordToggleEnabled="true"
             app:passwordToggleTint="@color/black"
             android:background="@drawable/button_custom_clear"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView3">
             <com.google.android.material.textfield.TextInputEditText
+                android:hint="Enter Password Here"
                 android:id="@+id/textInputPassword"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
