--- a/app/src/main/res/drawable/arrow_circle.xml
+++ b/app/src/main/res/drawable/arrow_circle.xml
@@ -2,6 +2,9 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
+            <padding
+                android:right="10dp"
+                />
         <solid android:color="@color/purplelight"/>
             <corners android:radius="10dp"/>
         </shape>
