--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -58,12 +58,12 @@
             android:id="@+id/textInputUsername"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:ems="10"
             android:inputType="textPersonName"
             android:hint="Username"
             android:autofillHints="name"
             android:background="@drawable/button_custom_clear"
-            android:padding="10dp"
+            android:paddingVertical="10dp"
+            android:paddingStart="15dp"
             android:layout_marginTop="5dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
