--- a/app/src/main/res/drawable/arrow_circle_transparent.xml
+++ b/app/src/main/res/drawable/arrow_circle_transparent.xml
@@ -3,26 +3,27 @@
     <item>
         <shape android:shape="rectangle">
             <padding
-                android:right="10dp"
+                android:right="20dp"
+                android:top="15dp"
+                android:bottom="15dp"
                 />
             <stroke
                 android:color="@color/black"
                 android:width="2dp" />
-            <corners android:radius="10dp"/>
+            <corners android:radius="10px"/>
         </shape>
     </item>
     <item
         android:gravity="center|end"
-        android:width="35dp"
-        android:height="35dp">
+        android:width="30dp"
+        android:height="30dp">
         <shape
-            android:padding="16dp"
             android:shape="oval">
             <solid android:color="@color/black" />
         </shape>
     </item>
     <item android:drawable="@drawable/ic_baseline_arrow_forward_24"
         android:gravity="center|end"
-        android:width="35dp"
-        android:height="35dp" />
+        android:width="30dp"
+        android:height="30dp" />
 </layer-list>
