--- a/app/src/main/res/drawable/background_rounded.xml
+++ b/app/src/main/res/drawable/background_rounded.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/offwhite2"/>
-    <corners android:radius="25dp"/>
+    <corners android:radius="10px"/>
 </shape>
