--- a/app/src/main/res/layout/activity_language.xml
+++ b/app/src/main/res/layout/activity_language.xml
@@ -12,54 +12,55 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Choose Your Language"
-        android:textSize="25dp"
-        android:textColor="@color/black"
-        app:layout_constraintVertical_bias=".35"
         android:fontFamily="@font/poppins_bold"
+        android:text="Choose Your Language"
+        android:textColor="@color/black"
+        android:layout_marginBottom="30dp"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
+        app:layout_constraintStart_toStartOf="@+id/constraintLayout2" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout2"
+        android:layout_width="315dp"
+        android:layout_height="195dp"
+        android:paddingVertical="30dp"
+        android:paddingHorizontal="20dp"
+        android:background="@drawable/background_rounded"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="195dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:background="@drawable/background_rounded"
-        android:padding="25dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView">
+        app:layout_constraintTop_toTopOf="parent">
 
         <Button
             android:id="@+id/buttonArabic"
-            android:layout_width="match_parent"
+            android:layout_width="275dp"
             android:layout_height="60dp"
-            android:text="ARABIC"
-            android:textStyle="bold"
-            android:textColor="@color/black"
             android:background="@drawable/arrow_circle_transparent"
+            android:text="ARABIC"
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/buttonEnglish" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <Button
             android:id="@+id/buttonEnglish"
-            android:layout_width="match_parent"
+            android:layout_width="275dp"
             android:layout_height="60dp"
-            android:text="ENGLISH"
-            android:textStyle="bold"
+            android:layout_marginBottom="15dp"
             android:background="@drawable/arrow_circle"
+            android:text="ENGLISH"
+            android:textSize="16sp"
+            android:textStyle="bold"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toTopOf="@+id/buttonArabic"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginBottom="15dp"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
