--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="offwhite">#B3B3B3</color>
+    <color name="offwhite">#FAFAFA</color>
     <color name="offwhite2">#D8D8D8</color>
     <color name="transparent">#00FFFFFF</color>
     <color name="purplelight">#782B90</color>
