--- a/app/src/main/res/drawable/button_custom_clear.xml
+++ b/app/src/main/res/drawable/button_custom_clear.xml
@@ -7,6 +7,6 @@
         android:color="@color/black"
         android:width="2dp" />
 
-    <corners android:radius="10dp"/>
+    <corners android:radius="6px"/>
 
 </shape>
