--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,6 +37,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:text="User name"
+            android:textSize="14sp"
+            android:textColor="#75889C"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -46,6 +48,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Password"
+            android:textSize="14sp"
+            android:textColor="#75889C"
             android:textStyle="bold"
             android:layout_marginTop="20dp"
             app:layout_constraintStart_toStartOf="parent"
