--- a/app/src/main/res/layout/activity_language.xml
+++ b/app/src/main/res/layout/activity_language.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_bold"
         android:text="Choose Your Language"
-        android:textColor="@color/black"
+        android:textColor="#2B2B40"
         android:layout_marginBottom="30dp"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
@@ -39,7 +39,7 @@
             android:background="@drawable/arrow_circle_transparent"
             android:text="ARABIC"
             android:textSize="16sp"
-            android:textColor="@color/black"
+            android:textColor="#2B2B40"
             android:textStyle="bold"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toBottomOf="parent"
