--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_vector"
+    android:padding="45dp"
     tools:context=".MainActivity">
 
     <ImageView
@@ -15,14 +16,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.35"
+        app:layout_constraintVertical_bias="0.3"
         app:srcCompat="@drawable/icon_placeholder" />
 
     <ProgressBar
         android:paddingVertical="5dp"
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="310dp"
+        android:layout_width="match_parent"
         android:scaleY="1"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
