--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_vector"
@@ -11,23 +13,28 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
         android:layout_marginBottom="25dp"
+
         android:fontFamily="@font/poppins_bold"
         android:text="Let's Start with Sign In"
         android:textColor="@color/black"
         android:textSize="24sp"
+
         app:layout_constraintBottom_toTopOf="@+id/cardViewSignIn"
         app:layout_constraintStart_toStartOf="@+id/cardViewSignIn" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardViewSignIn"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+
+        app:cardCornerRadius="10dp"
         android:paddingVertical="5dp"
         android:paddingHorizontal="20dp">
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -104,7 +111,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
 
-            <Button
+             <Button
                 android:id="@+id/buttonSignIn"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
