Adjusted paddings, width and height to wrap content/match parent to allow better alignment with variable size devices.
-Adjusted paddings

--- a/app/src/main/res/drawable/arrow_circle_transparent.xml
+++ b/app/src/main/res/drawable/arrow_circle_transparent.xml
@@ -10,7 +10,7 @@
             <stroke
                 android:color="#2B2B40"
                 android:width="2dp" />
-            <corners android:radius="10px"/>
+            <corners android:radius="10dp"/>
         </shape>
     </item>
     <item
