--- a/app/src/main/res/drawable/arrow_circle.xml
+++ b/app/src/main/res/drawable/arrow_circle.xml
@@ -8,7 +8,7 @@
                 android:bottom="15dp"
                 />
         <solid android:color="@color/purplelight"/>
-            <corners android:radius="10px"/>
+            <corners android:radius="10dp"/>
         </shape>
     </item>
     <item
