--- a/app/src/main/res/drawable/button_custom_color.xml
+++ b/app/src/main/res/drawable/button_custom_color.xml
@@ -4,6 +4,6 @@
     android:shape="rectangle">
 
     <solid android:color="#782B90"/>
-    <corners android:radius="10px"/>
+    <corners android:radius="10dp"/>
 
 </shape>
