--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -115,6 +115,7 @@
                 android:layout_marginTop="30dp"
                 android:background="@drawable/button_custom_color"
                 android:text="Sign in"
+                android:textAllCaps="false"
                 android:textSize="16sp"
                 app:backgroundTint="@null"
                 app:layout_constraintBottom_toBottomOf="parent"
