Adjusted paddings, width and height to wrap content/match parent to allow better alignment with variable size devices.
-Adjusted paddings

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,5 @@
     <color name="offwhite">#FAFAFA</color>
     <color name="offwhite2">#FFFFFF</color>
     <color name="transparent">#00FFFFFF</color>
-    <color name="purplelight">#782B90</color>
+    <color name="purple_light">#782B90</color>
 </resources>
