--- a/app/src/main/res/drawable/arrow_circle.xml
+++ b/app/src/main/res/drawable/arrow_circle.xml
@@ -7,7 +7,7 @@
                 android:top="15dp"
                 android:bottom="15dp"
                 />
-        <solid android:color="@color/purplelight"/>
+        <solid android:color="@color/purple_light"/>
             <corners android:radius="10dp"/>
         </shape>
     </item>
