--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -71,7 +71,7 @@
                 android:background="@drawable/button_custom_clear"
                 android:hint="Username"
                 android:inputType="textPersonName"
-                android:paddingVertical="10dp"
+                android:paddingHorizontal="15dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -95,6 +95,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@color/transparent"
+                    android:paddingHorizontal="15dp"
                     android:hint="Enter Password Here"
                     android:inputType="textPassword"
                     app:backgroundTint="@null" />
