--- a/app/src/main/res/layout/activity_language.xml
+++ b/app/src/main/res/layout/activity_language.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/background_vector"
     android:padding="30dp"
-    tools:context=".LanguageActivity">
+    tools:context=".ui.LanguageActivity">
 
     <TextView
         android:id="@+id/textView"
