--- a/app/src/main/res/drawable/background_vector.xml
+++ b/app/src/main/res/drawable/background_vector.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/offwhite"/>
+    <item android:drawable="@color/off_white"/>
     <item>
         <bitmap
             android:src="@drawable/img_background"
