--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,15 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="offwhite">#FAFAFA</color>
+    <color name="off_white">#FAFAFA</color>
     <color name="offwhite2">#FFFFFF</color>
     <color name="transparent">#00FFFFFF</color>
     <color name="purple_light">#782B90</color>
+    <color name="monthly_light">#1AC83493</color>
+    <color name="monthly_dark">#C83493</color>
+    <color name="weekly_light">#1AF58220</color>
+    <color name="weekly_dark">#F58220</color>
+    <color name="daily_light">#1A00BA00</color>
+    <color name="daily_dark">#00BA00</color>
+
 </resources>
