--- a/app/src/main/res/layout/rows_item.xml
+++ b/app/src/main/res/layout/rows_item.xml
@@ -6,8 +6,7 @@
     android:layout_height="wrap_content"
     android:background="@drawable/background_monthly"
     android:padding="10dp"
-    android:layout_marginBottom="10dp">
-
+    android:layout_marginTop="10dp">
     <TextView
         android:id="@+id/textTaskTitle"
         android:layout_width="wrap_content"
@@ -19,7 +18,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
     <TextView
         android:id="@+id/textTaskType"
         android:layout_width="wrap_content"
@@ -33,5 +31,4 @@
         app:layout_constraintCircleRadius="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
