Adjusted paddings, width and height to wrap content/match parent to allow better alignment with variable size devices.
-Adjusted paddings

-Adding bottomNav and fragments for multiple activities/views
-Added fragments
- Completed main menu fragments for task views
- Added nested recycler

--- a/app/src/main/res/layout/activity_language.xml
+++ b/app/src/main/res/layout/activity_language.xml
@@ -12,8 +12,9 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/poppins_bold"
+        android:fontFamily="@font/poppins_semi_bold"
         android:text="Choose Your Language"
+        android:textStyle="bold"
         android:textColor="#2B2B40"
         android:layout_marginBottom="30dp"
         android:textSize="24sp"
@@ -43,8 +44,8 @@
                 android:background="@drawable/arrow_circle_transparent"
                 android:text="ARABIC"
                 android:textSize="16sp"
+                android:fontFamily="@font/poppins_semi_bold"
                 android:textColor="#2B2B40"
-                android:textStyle="bold"
                 app:backgroundTint="@null"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -58,7 +59,7 @@
                 android:background="@drawable/arrow_circle"
                 android:text="ENGLISH"
                 android:textSize="16sp"
-                android:textStyle="bold"
+                android:fontFamily="@font/poppins_semi_bold"
                 app:backgroundTint="@null"
                 app:layout_constraintBottom_toTopOf="@+id/buttonArabic"
                 app:layout_constraintEnd_toEndOf="parent"
