--- a/app/src/main/res/layout/rows_item.xml
+++ b/app/src/main/res/layout/rows_item.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:text="Testing Title Ext"
+        android:fontFamily="@font/poppins_regular"
         android:textSize="16sp"
         android:textColor="@color/monthly_dark"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -26,6 +27,7 @@
         android:paddingHorizontal="10dp"
         android:paddingVertical="3dp"
         android:text="Testing"
+        android:fontFamily="@font/poppins_regular"
         android:textColor="@color/monthly_dark"
         android:textSize="10sp"
         app:layout_constraintCircleRadius="15dp"
