--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,7 @@
 
         android:layout_marginBottom="25dp"
 
-        android:fontFamily="@font/poppins_bold"
+        android:fontFamily="@font/poppins_semi_bold"
         android:text="Let's Start with Sign In"
         android:textColor="@color/black"
         android:textSize="24sp"
@@ -46,7 +46,7 @@
                 android:text="User name"
                 android:textColor="#75889C"
                 android:textSize="14sp"
-                android:textStyle="bold"
+                android:fontFamily="@font/poppins_regular"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -57,7 +57,7 @@
                 android:text="Password"
                 android:textSize="14sp"
                 android:textColor="#75889C"
-                android:textStyle="bold"
+                android:fontFamily="@font/poppins_regular"
                 android:layout_marginTop="20dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textInputUsername" />
@@ -107,6 +107,7 @@
                 android:text="Remember me"
                 android:buttonTint="@color/purple_light"
                 android:layout_marginTop="5dp"
+                android:fontFamily="@font/poppins_regular"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
 
@@ -119,6 +120,7 @@
                 android:text="Sign in"
                 android:textAllCaps="false"
                 android:textSize="16sp"
+                android:fontFamily="@font/poppins_regular"
                 app:backgroundTint="@null"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
