--- a/app/src/main/res/layout/activity_language.xml
+++ b/app/src/main/res/layout/activity_language.xml
@@ -13,6 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_semi_bold"
+        android:includeFontPadding="false"
         android:text="Choose Your Language"
         android:textStyle="bold"
         android:textColor="#2B2B40"
@@ -45,6 +46,7 @@
                 android:text="ARABIC"
                 android:textSize="16sp"
                 android:fontFamily="@font/poppins_semi_bold"
+                android:includeFontPadding="false"
                 android:textColor="#2B2B40"
                 app:backgroundTint="@null"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -60,6 +62,7 @@
                 android:text="ENGLISH"
                 android:textSize="16sp"
                 android:fontFamily="@font/poppins_semi_bold"
+                android:includeFontPadding="false"
                 app:backgroundTint="@null"
                 app:layout_constraintBottom_toTopOf="@+id/buttonArabic"
                 app:layout_constraintEnd_toEndOf="parent"
