--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,6 +18,7 @@
 
         android:fontFamily="@font/poppins_semi_bold"
         android:text="Let's Start with Sign In"
+        android:includeFontPadding="false"
         android:textColor="@color/black"
         android:textSize="24sp"
 
@@ -44,6 +45,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="User name"
+                android:includeFontPadding="false"
                 android:textColor="#75889C"
                 android:textSize="14sp"
                 android:fontFamily="@font/poppins_regular"
@@ -55,6 +57,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Password"
+                android:includeFontPadding="false"
                 android:textSize="14sp"
                 android:textColor="#75889C"
                 android:fontFamily="@font/poppins_regular"
@@ -70,6 +73,7 @@
                 android:autofillHints="name"
                 android:background="@drawable/button_custom_clear"
                 android:hint="Username"
+                android:includeFontPadding="false"
                 android:inputType="textPersonName"
                 android:paddingHorizontal="15dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -108,6 +112,7 @@
                 android:buttonTint="@color/purple_light"
                 android:layout_marginTop="5dp"
                 android:fontFamily="@font/poppins_regular"
+                android:includeFontPadding="false"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
 
@@ -121,6 +126,7 @@
                 android:textAllCaps="false"
                 android:textSize="16sp"
                 android:fontFamily="@font/poppins_regular"
+                android:includeFontPadding="false"
                 app:backgroundTint="@null"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
