--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -32,6 +32,7 @@
                 android:layout_height="wrap_content"
                 android:text="Weekly Visit Plan"
                 android:fontFamily="@font/poppins_semi_bold"
+                android:includeFontPadding="false"
                 android:textSize="24sp"
                 android:textColor="@color/black"
                 />
@@ -41,6 +42,7 @@
                 android:layout_height="wrap_content"
                 android:text="Weekly Visit Plan"
                 android:fontFamily="@font/poppins_regular"
+                android:includeFontPadding="false"
                 android:textSize="16sp"
                 android:textColor="#802B2B40"
                 />
@@ -65,6 +67,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_semi_bold"
+        android:includeFontPadding="false"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
         android:text="Set New Schedule"
