--- a/app/src/main/res/layout/rows_item.xml
+++ b/app/src/main/res/layout/rows_item.xml
@@ -14,6 +14,7 @@
         android:layout_margin="10dp"
         android:text="Testing Title Ext"
         android:fontFamily="@font/poppins_regular"
+        android:includeFontPadding="false"
         android:textSize="16sp"
         android:textColor="@color/monthly_dark"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -29,6 +30,7 @@
         android:text="Testing"
         android:fontFamily="@font/poppins_regular"
         android:textColor="@color/monthly_dark"
+        android:includeFontPadding="false"
         android:textSize="10sp"
         app:layout_constraintCircleRadius="15dp"
         app:layout_constraintEnd_toEndOf="parent"
