--- a/app/src/main/res/layout/rows_item_nested.xml
+++ b/app/src/main/res/layout/rows_item_nested.xml
@@ -10,6 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_semi_bold"
+        android:includeFontPadding="false"
         android:text="TEST TEST TEST TEST"
         android:textColor="@color/black"
         android:textSize="24sp"
