Adjusted paddings, width and height to wrap content/match parent to allow better alignment with variable size devices.
-Adjusted paddings

-Adding bottomNav and fragments for multiple activities/views
-Added fragments
- Completed main menu fragments for task views
- Added nested recycler

--- a/app/src/main/res/drawable/plus_circle_button.xml
+++ b/app/src/main/res/drawable/plus_circle_button.xml
@@ -7,7 +7,7 @@
                 android:top="15dp"
                 android:bottom="15dp"
                 />
-            <solid android:color="@color/purple_light"/>
+            <solid android:color="#782B90"/>
             <corners android:radius="10dp"/>
         </shape>
     </item>
